# mikey_nodes

./: 2k_face_hands_extensive.json  README.md  __init__.py  mikey_node_workflow.json  mikey_nodes.py  ooba.json  prompt_with_sdxl.json  prompt_with_styles.json  prompt_with_styles_2x.json  prompt_with_styles_haldclut.json  pyproject.toml  ratios.json  requirements.txt  styles.json  user_ratio_presets.json.example
.github/workflows/: publish.yml
haar_cascade_models/: hand_gesture.xml
