[project]
name = "mikey_nodes"
description = "Nodes: Prompt With Style, Prompt With SDXL, Resize Image for SDXL, Save Image With Prompt Data, HaldCLUT, Empty Latent Ratio Select/Custom SDXL"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bash-j/mikey_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "mikey_nodes"
Icon = ""
